--- a/fiches.html
+++ b/fiches.html
@@ -42,6 +42,7 @@
 
 <div id="modal" class="modal">
   <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
     <iframe id="modal-iframe" src="" width="100%" height="100%" frameborder="0"></iframe>
   </div>
 </div>
